subsciption part now done and also task number on mobile app issue fixed

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -20,6 +20,13 @@
   background-color: #0d3313 !important
 }
 
+.textBreak {
+  word-wrap: break-word;
+  word-break: break-word;
+  white-space: initial;
+}
+
+
 
 .iconDashboardActive {
   margin-right: 15px;
